[package]
name = "wtf-k8s-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.28"
pin-utils = "0.1"
anyhow = "1.0.71"

tracing-subscriber = "0.3"
tracing = "0.1"
color-eyre = "0.6"
kube = { version = "0.83", features = ["runtime"] } 
k8s-openapi = { version = "0.18", features = ["v1_26"] }
async-trait = "0.1.71"
